--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -116,7 +116,7 @@
                 <p><button type="button" id="Quest_Num" onclick="Question_Numerique()">Passer en question numérique</button></p>
                 <p><button type="button" id="Quest_QCM" onclick="Question_QCM()">Passer en question à choix multiple</button></p>
                 <p><button type="button" id="demandereponse" onclick="demandePlusReponse()">Ajouter une réponse</button></p>
-                <p><textarea name="rep_num" id="rep_num" cols="30" rows="10"></textarea></p>
+                <p><input type="number" pattern="[0-9]+" id="rep_num" name="rep_num"></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
             </form>
         </div>
