--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,9 @@ td {
     border: 1px solid black;
 }
 
+
 /* Classe pour colorer les titres des colonnes d'un tableau */
+
 .top {
     background-color: darkgray;
 }
@@ -29,8 +31,10 @@ h1 {
     padding: 0.5em;
 }
 
+
 /* Classe basique affichage du menu au centre */
-.menu{
+
+.menu {
     border: 0.5em solid black;
     border-radius: 10px;
     padding: 2em;
@@ -38,63 +42,80 @@ h1 {
     opacity: 0.9;
     top: 50%;
     left: 50%;
-    font-size:0.7em;
+    font-size: 0.7em;
     transform: translate(-50%, -50%);
     text-align: center;
     background-color: whitesmoke;
 }
 
+
 /* Ligne verticale */
-.liVer{
+
+.liVer {
     background-color: black;
     width: 1px;
     margin: 1em;
 }
 
+
 /* Classe pour définir la taille d'une liste et la possibilité de scroll si dépassement */
-.liste{
-    height:30vh;
-    border:2px solid black;
+
+.liste {
+    height: 30vh;
+    border: 2px solid black;
     overflow-y: scroll;
 }
+
+
 /* Changement en fonction de la taille de l'écran */
+
 @media screen and (min-width: 1600px) {
-    .menu{
+    .menu {
         font-size: 1em;
     }
 }
 
-.newEtudiant{
-    border:2px solid black;
+.newEtudiant {
+    border: 2px solid black;
     text-align: center;
 }
 
+
 /* Centrage d'un élément sur l'écran */
-.mid{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+
+.mid {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     opacity: 0.9;
 }
 
+
 /* Texte au milieu */
-.middle{
+
+.middle {
     text-align: center;
 }
 
+
 /* Texte à gauche */
-.left{
+
+.left {
     text-align: left;
 }
 
+
 /* Disposition flex */
-.double{
+
+.double {
     display: flex;
 }
 
+
 /* Classe pour créer les questions dans ajoutQuestion (gauche) */
-.code{
+
+.code {
     border: 0.5em solid black;
     border-radius: 10px;
     padding: 2em;
@@ -106,8 +127,10 @@ h1 {
     overflow-y: scroll;
 }
 
+
 /* Classe pour visualiser les questions dans ajoutQuestion (droite) */
-.visu{
+
+.visu {
     border: 0.5em solid black;
     border-radius: 10px;
     padding: 2em;
@@ -117,18 +140,24 @@ h1 {
     margin-left: 5em;
 }
 
+
 /* Affichage réponses visuel ligne */
-.repLi{
+
+.repLi {
     display: flex;
 }
 
+
 /* Affichage réponses visuel colonne */
-.repCo{
-    display:flex;
+
+.repCo {
+    display: flex;
     margin-right: 1em;
 }
 
+
 /* Classe pour modifier les <a> afin qu'ils ressemblent à des boutons */
+
 .button {
     /* outline: none; */
     text-align: center;
@@ -140,12 +169,16 @@ h1 {
     transition: 0.25s;
 }
 
+
 /* Si on a déjà cliquer sur un bouton */
+
 .button:visited {
     color: black;
 }
 
+
 /* Lorsqu'on passe le curseur dessus */
+
 .button:hover {
     background-color: lightgray;
     transition: 0.25s;
@@ -161,22 +194,28 @@ footer {
     font: menu;
 }
 
+
 /* Classe affichage de la barre de navigation */
-.nav-list{
-    list-style-type:none;
+
+.nav-list {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow:hidden;
+    overflow: hidden;
     background-color: #333;
     font: menu;
 }
 
+
 /* allignement des li de la navigation à gauche */
+
 .nav-list li {
     float: left;
 }
 
+
 /* Customisation des liens */
+
 .nav-list li a {
     display: block;
     color: white;
@@ -185,45 +224,58 @@ footer {
     text-decoration: none;
 }
 
+
 /* Lorsqu'on passe le curseur dessus */
-.nav-list li a:hover{
+
+.nav-list li a:hover {
     background-color: #111;
 }
 
+
 /* Colore en rouge, le bouton de la page actuelle */
-.active{
+
+.active {
     background-color: darkred;
 }
 
+
 /* taille de l'icone pour supprimer une réponse */
-.delete{
+
+.delete {
     width: 1.5vw;
     height: 1.5vw;
 }
 
+
 /* CSS de checkbox réponse (voir références) */
+
 [type="checkbox"].newReponse:not(:checked),
 [type="checkbox"].newReponse:checked {
     position: absolute;
     left: -9999px;
 }
-[type="checkbox"].newReponse:not(:checked) + label,
-[type="checkbox"].newReponse:checked + label {
+
+[type="checkbox"].newReponse:not(:checked)+label,
+[type="checkbox"].newReponse:checked+label {
     position: relative;
     padding-left: 75px;
     cursor: pointer;
 }
-[type="checkbox"].newReponse:not(:checked) + label::before,
-[type="checkbox"].newReponse:checked + label::before,
-[type="checkbox"].newReponse:not(:checked) + label::after,
-[type="checkbox"].newReponse:checked + label::after {
+
+[type="checkbox"].newReponse:not(:checked)+label::before,
+[type="checkbox"].newReponse:checked+label::before,
+[type="checkbox"].newReponse:not(:checked)+label::after,
+[type="checkbox"].newReponse:checked+label::after {
     content: '';
     position: absolute;
 }
-[type="checkbox"].newReponse:not(:checked) + label::before,
-[type="checkbox"].newReponse:checked + label::before {
-    left:0; top: -3px;
-    width: 65px; height: 30px;
+
+[type="checkbox"].newReponse:not(:checked)+label::before,
+[type="checkbox"].newReponse:checked+label::before {
+    left: 0;
+    top: -3px;
+    width: 65px;
+    height: 30px;
     background: #eb0000;
     border-radius: 15px;
     -webkit-transition: background-color .2s;
@@ -231,30 +283,37 @@ footer {
     -ms-transition: background-color .2s;
     transition: background-color .2s;
 }
-[type="checkbox"].newReponse:not(:checked) + label::after,
-[type="checkbox"].newReponse:checked + label::after {
-    width: 20px; height: 20px;
+
+[type="checkbox"].newReponse:not(:checked)+label::after,
+[type="checkbox"].newReponse:checked+label::after {
+    width: 20px;
+    height: 20px;
     -webkit-transition: all .2s;
     -moz-transition: all .2s;
     -ms-transition: all .2s;
     transition: all .2s;
     border-radius: 50%;
     background: #7F8C9A;
-    top: 2px; left: 5px;
+    top: 2px;
+    left: 5px;
 }
+
 
 /* on checked */
-[type="checkbox"].newReponse:checked + label::before {
-    background:#2fb41a; 
-}
-[type="checkbox"].newReponse:checked + label::after {
-    /* background: #000000; */
-    top: 2px; left: 40px;
+
+[type="checkbox"].newReponse:checked+label::before {
+    background: #2fb41a;
 }
 
-[type="checkbox"].newReponse:checked + label .Checked,
-[type="checkbox"].newReponse:not(:checked) + label .Checked::before,
-[type="checkbox"].newReponse:checked + label .Checked::after {
+[type="checkbox"].newReponse:checked+label::after {
+    /* background: #000000; */
+    top: 2px;
+    left: 40px;
+}
+
+[type="checkbox"].newReponse:checked+label .Checked,
+[type="checkbox"].newReponse:not(:checked)+label .Checked::before,
+[type="checkbox"].newReponse:checked+label .Checked::after {
     position: absolute;
     left: 6px;
     width: 65px;
@@ -267,7 +326,8 @@ footer {
     -ms-transition: all .2s;
     transition: all .2s;
 }
-[type="checkbox"].newReponse:focus + label::before {
+
+[type="checkbox"].newReponse:focus+label::before {
     border: 1px dashed #777;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -276,63 +336,81 @@ footer {
     margin-top: -1px;
 }
 
+
 /* Affichage du qcm crée */
-.affQCM{
-    height:60vh;
+
+.affQCM {
+    height: 60vh;
     width: 40vw;
     background-color: wheat;
-    overflow-y:scroll;
+    overflow-y: scroll;
 }
+
 
 /* Affichage des énoncés dans le qcm */
-.affQuestion{
+
+.affQuestion {
     text-align: left;
     margin: 1em;
 }
+
 
 /* Affichage des réponses dans le qcm */
-.affReponse{
+
+.affReponse {
     text-align: left;
     margin: 1em;
 }
 
+
 /* Affichage de checkbox pour répondre dans le qcm */
-.bigCheckbox{
-    height:1.5em;
+
+.bigCheckbox {
+    height: 1.5em;
     width: 1.5em;
 }
 
+
 /* Div etiquette */
-.affichageEtiquette{
+
+.affichageEtiquette {
     margin: 0;
 }
 
+
 /* Style de la liste */
+
 .affichageEtiquette ul {
     list-style-type: none;
 }
 
+
 /* Style pour chaque etiquette */
-.affichageEtiquette li{
-    float:left;
+
+.affichageEtiquette li {
+    float: left;
     width: 33%;
 }
 
-fieldset{
+fieldset {
     background-color: wheat;
     height: 5em;
     overflow-y: scroll;
     font-weight: bold;
 }
 
+
 /* Style de flash() (Flask) */
-.flashes{
+
+.flashes {
     color: red;
     font-weight: bold;
 }
 
+
 /* Style etiquette*/
-.gereEtiquette{
+
+.gereEtiquette {
     border: 0.5em solid black;
     border-radius: 10px;
     padding: 2em;
@@ -342,29 +420,55 @@ fieldset{
     text-align: center;
 }
 
+
 /* Changement en fonction de la taille de l'écran */
+
 @media screen and (min-width: 1280px) {
-    .gereEtiquette{
+    .gereEtiquette {
         font-size: 1em;
     }
 }
+
 @media screen and (min-width: 1600px) {
-    .gereEtiquette{
+    .gereEtiquette {
         width: 20vw;
     }
 }
+
+
 /* Style pour créer une étiquette */
-.gaucheEtiquette{
+
+.gaucheEtiquette {
     margin-right: 5em;
 }
 
+
 /* Style pour modifier une étiquette */
-.centreEtiquette{
+
+.centreEtiquette {
     margin-right: 2.5em;
     margin-left: 2.5em;
 }
 
+
 /* Style pour supprimer une étiquette */
-.droiteEtiquette{
+
+.droiteEtiquette {
     margin-left: 5em;
 }
+
+
+/* test
+
+label {
+    display: block;
+    margin-top: 1em;
+}
+
+input:valid {
+    background-color: palegreen;
+}
+
+input:invalid {
+    background-color: lightpink;
+} */
