--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -119,7 +119,7 @@
                 <!-- <p><input type="number" id="rep_num" name="rep_num"></p> -->
                 <label for="rep_num" class="label_rep_num"></label>
                 <p id="rep_num"><input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*" required><b>.</b>
-                    <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}"></p>
+                    <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}" value="00"></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
             </form>
         </div>
