--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -117,7 +117,7 @@
                 <p><button type="button" id="Quest_QCM" onclick="Question_QCM()">Passer en question à choix multiple</button></p>
                 <p><button type="button" id="demandereponse" onclick="demandePlusReponse()">Ajouter une réponse</button></p>
                 <!-- <p><input type="number" id="rep_num" name="rep_num"></p> -->
-                <label for="rep_num" class="label_rep_num"></label>
+                <!-- <label for="rep_num" class="label_rep_num"></label> -->
                 <p id="rep_num"><input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*" required><b>.</b>
                     <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}" value="00"></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
