--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -15,7 +15,7 @@
     <div class="mid double">
         <div class="code">
             <!-- Partie écriture -->
-            <form action="/ajout" method="POST">
+            <form action="/ajout" method="POST" onsubmit="onsub()">
                 <h1>Ecrivez une question</h1>
                 <p>Énoncé : <br/>
                     <!-- Zone de texte pour la question, methode onkeyup -->
@@ -25,6 +25,10 @@
                 <div class="nouveauBouton">
                     <script>
                         /* Fonction JS pour envoyer une requête GET à /plusDeReponse */
+
+                        function onsub(){
+                            console.log("submiiiiit")
+                        }
 
                         window.addEventListener('load', () => {
                             document.querySelector('#demandereponse').disabled = true;
@@ -118,7 +122,8 @@
                 <p><button type="button" id="demandereponse" onclick="demandePlusReponse()">Ajouter une réponse</button></p>
                 <!-- <p><input type="number" id="rep_num" name="rep_num"></p> -->
                 <!-- <label for="rep_num" class="label_rep_num"></label> -->
-                <p id="rep_num"><input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*" required><b>.</b>
+                <p id="rep_num">
+                    <input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*" ><b>.</b>
                     <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}" value="00"></p>
                 <p><input class="button" type="submit" value="Ajouter la question" /></p>
             </form>
