--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -15,7 +15,7 @@
     <div class="mid double">
         <div class="code">
             <!-- Partie écriture -->
-            <form action="/ajout" method="POST" onsubmit="onsub()">
+            <form action="/ajout" method="POST">
                 <h1>Ecrivez une question</h1>
                 <p>Énoncé : <br/>
                     <!-- Zone de texte pour la question, methode onkeyup -->
@@ -25,10 +25,6 @@
                 <div class="nouveauBouton">
                     <script>
                         /* Fonction JS pour envoyer une requête GET à /plusDeReponse */
-
-                        function onsub(){
-                            console.log("submiiiiit")
-                        }
 
                         window.addEventListener('load', () => {
                             document.querySelector('#demandereponse').disabled = true;
