work in progress modif

--- a/templates/ajoutQuestion.html
+++ b/templates/ajoutQuestion.html
@@ -88,6 +88,7 @@
                             document.querySelector('#rep_num').hidden = false;
                             document.querySelector('#Quest_Num').disabled = true;
                             document.querySelector('#Quest_Num').hidden = true;
+                            document.querySelector('#rep_num1').setAttribute("required", "");
                         }
 
                         function Question_QCM() {
