--- a/templates/modifQuestion.html
+++ b/templates/modifQuestion.html
@@ -33,8 +33,16 @@
             <div class="liVer"></div>
             <div>
                 <h1>Modifier vos réponses</h1>
+                
                 {% for reponse in reponses %}                 <!-- Pour chaque réponse parmis les réponses -->
+                {%if reponse.estNumerique %}
+                <p id="rep_num"><input type="text" id="rep_num1" name="rep_num1" pattern="[0-9]*" value="{{reponse.reponse}}" ><b>.</b>
+                    <input type="text" id="rep_num2" name="rep_num2" pattern="\d{0,2}" value="00"></p>
+                <p><input class="button" type="submit" value="Ajouter la question" /></p>
+                
+                {%else%}
                 <p><textarea name="R{{reponse.idR}}" rows="4" cols="40">{{reponse.reponse}}</textarea></p>
+                {%endif%}
                 {% endfor %}
                 <p><input class="button" type="submit" value="Modifier" /></p>
             </div>
