--- a/templates/accueil/espEnseignant.html
+++ b/templates/accueil/espEnseignant.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     {%include 'partials/_nav.html'%} 
-    <div class="menu">
+    <div class="menu menuAcc">
         <h1>Espace<br/>Enseignant</h1>
         {% with messages = get_flashed_messages() %}  <!-- Récupère les messages de flash() du serveur -->
             {% if messages %}
